Fixed the button on mobiles

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -32,7 +32,7 @@
     .boi_3{
         margin:10px;
         position:relative;
-        left:160px;
+        left:110px;
     }
     
 }
